--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 <body>
     <div class="container">
         <div class="reel-viewer">
+            <img class="logo" src="./logo.png" alt="">
             <video id="bgVideo" autoplay muted loop playsinline></video>
             <div id="quoteOverlay" class="quote-overlay">
                 <p id="quoteText"></p>
             </div>
-            <img class="logo" src="./logo.png" alt="">
+            <h3 class="follow-text">Follow for more ❤️</h3>
         </div>
 
         <div class="meta-section">
